<resources>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by <g id="app_name">%1$s</g></string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="abandon_changes_question">Discard changes?</string>
    <string name="about_summary">Help, Terms of Service, Privacy Policy, Cookies Use</string>
    <string name="about_title">About %s</string>
    <string name="accessibility_concatenation_format">%1$s. %2$s</string>
    <string name="account_row_label">Tap to switch accounts</string>
    <string name="accounts_title">Accounts</string>
    <string name="action_error">Unable to complete the action.</string>
    <string name="action_prompt_cancel_button_text">Got it</string>
    <string name="activity">Activity</string>
    <string name="activity_by_one">by %1$s</string>
    <string name="activity_by_others">by %1$s and %2$d others</string>
    <string name="activity_by_two">by %1$s and %2$s</string>
    <string name="activity_favorited">Favorited</string>
    <string name="activity_fetch_error">Cannot retrieve activity at this time. Please try again later.</string>
    <string name="activity_followed">Followed</string>
    <string name="activity_retweeted">Retweeted</string>
    <string name="activity_stork_title">"Check out the people and Tweets
everyone you follow is excited about."</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="add_account_summary">Add additional Twitter accounts</string>
    <string name="add_phone">Add phone</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="add_tweet_to_collection_error">Failed to add Tweet to collection</string>
    <string name="add_tweet_to_collection_success">Tweet added to collection</string>
    <string name="ads_companion">Twitter Ads</string>
    <string name="age_gating_failed">You are not old enough to follow this user.</string>
    <string name="age_gating_required">To follow this account, please supply your date of birth.</string>
    <string name="age_gating_submit">Done</string>
    <string name="age_gating_text">To follow this account, you must meet minimum legal age requirements. Please supply your date of birth.</string>
    <string name="age_gating_title">Enter your age</string>
    <string name="allow_display_media">Display media</string>
    <string name="always_allow_display_media">Always display media</string>
    <string name="app_free">FREE</string>
    <string name="block">Block</string>
    <string name="button_action_delete">Delete</string>
    <string name="button_action_dismiss">Dismiss</string>
    <string name="button_action_fave">Favorite</string>
    <string name="button_action_reply">Reply</string>
    <string name="button_action_retweet">Retweet</string>
    <string name="button_action_share">Share</string>
    <string name="button_status_favorited">Favorite (Favorited)</string>
    <string name="button_status_retweeted">Retweet (Retweeted)</string>
    <string name="change_password">Change password</string>
    <string name="change_screen_name">Update username</string>
    <string name="commerce_menu_order_history">Order history</string>
    <string name="commerce_profile_summary_title">Cards and shipping</string>
    <string name="delete">Delete</string>
    <string name="dm_add_people">Add people</string>
    <string name="dm_edit_group_name">Edit group name</string>
    <string name="dm_flag_action">Flag</string>
    <string name="dm_turn_off_notifications">Turn off notifications</string>
    <string name="dm_view_participants">View people</string>
    <string name="drafts">Drafts</string>
    <string name="highlights_title">Highlights</string>
    <string name="home_direct_messages">Messages</string>
    <string name="instant_signup_confirmation">Your Twitter account has been created!</string>
    <string name="log_out">Log out</string>
    <string name="mute">Mute</string>
    <string name="news_title">News</string>
    <string name="next">Next</string>
    <string name="notif_center_title">Notifications</string>
    <string name="phone_association_settings_title">Phone number</string>
    <string name="profile_item">Me</string>
    <string name="profile_tab_title_collections_owned_by">Collections</string>
    <string name="profile_tab_title_lists_owned_by">Lists</string>
    <string name="receive_dms_from_anyone">Receive messages from anyone</string>
    <string name="receive_dms_from_anyone_summary">You will be able to receive Direct Messages from any Twitter user even if you do not follow them.</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="settings_account">Accounts</string>
    <string name="settings_advanced_options">Advanced options</string>
    <string name="settings_app_graph_title">Tailor Twitter based on my apps</string>
    <string name="settings_discoverable_by_email_summary">Allow users to find you by email</string>
    <string name="settings_discoverable_by_email_title">Find by email</string>
    <string name="settings_discoverable_by_phone_summary">Allow users to find you by phone number</string>
    <string name="settings_discoverable_by_phone_title">Find by phone number</string>
    <string name="settings_display_possibly_sensitive_media_summary">You will see all photos or videos even if they contain sensitive media.</string>
    <string name="settings_display_possibly_sensitive_media_title">Show me sensitive media</string>
    <string name="settings_enable_http_proxy_summary">Configure HTTP proxy for network requests.</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_general_settings">General</string>
    <string name="settings_in_app_browser">Use in-app browser</string>
    <string name="settings_in_app_browser_summary">Open external links with Twitter browser</string>
    <string name="settings_location_summary">Allow Twitter to use your location</string>
    <string name="settings_location_title">Location</string>
    <string name="settings_media_forward">Image previews</string>
    <string name="settings_media_tagging_title">Who can tag me in photos</string>
    <string name="settings_notif_sync_settings">Notifications and Sync</string>
    <string name="settings_notifications_timeline">Notifications tab</string>
    <string name="settings_notifications_title">Mobile notifications</string>
    <string name="settings_other">Other</string>
    <string name="settings_personalized_ads_title">Tailor ads based on info from ad partners</string>
    <string name="settings_polling_interval_title">Sync interval</string>
    <string name="settings_privacy_title">Privacy</string>
    <string name="settings_protected_summary">Only current followers and people you approve in the future will be able to see your Tweets</string>
    <string name="settings_protected_title">Protect my Tweets</string>
    <string name="settings_proxy_settings">Proxy</string>
    <string name="settings_security_title">Security</string>
    <string name="settings_sound_effects">Sound effects</string>
    <string name="settings_sync_data_title">Sync data</string>
    <string name="signup_addr_book_no_phone_text">Upload my address book to connect me with my friends.</string>
    <string name="signup_email_hint">name@example.com</string>
    <string name="signup_email_label">Email</string>
    <string name="signup_name_hint">First and last name</string>
    <string name="signup_name_label">Full name</string>
    <string name="signup_password_hint">At least 6 characters</string>
    <string name="signup_password_label">Password</string>
    <string name="signup_phone_hint">Optional</string>
    <string name="signup_phone_label">Phone</string>
    <string name="signup_sign_up">Sign up</string>
    <string name="signup_tos_privacy">By signing up, you agree to the <a href="http://mobile.twitter.com/tos">Terms of Service</a> and <a href="http://mobile.twitter.com/privacy">Privacy Policy</a>, including <a href="https://support.twitter.com/articles/20170514">Cookie Use</a>. Others will be able to find you by email or phone number when provided.</string>
    <string name="signup_username_hint">6–15 characters</string>
    <string name="signup_username_label">Username</string>
    <string name="unmute">Unmute</string>
    <string name="users_add_list_member">Add to list</string>
    <string name="users_direct_message">Send direct message</string>
    <string name="users_pick_friend_title">Find people</string>
    <string name="users_turn_off_retweets">Turn off Retweets</string>
    <string name="users_turn_on_retweets">Turn on Retweets</string>
    <string name="users_unblock">Unblock</string>
    <string name="default_font_size">14</string>
</resources>