<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_notif_sync_settings">
        <Preference android:persistent="false" android:title="@string/settings_notifications_title" android:key="notif" />
        <Preference android:title="@string/settings_notifications_timeline" android:key="notifications_timeline" />
        <CheckBoxPreference android:title="@string/settings_sync_data_title" android:key="sync_data" />
        <ListPreference android:entries="@array/refresh_intervals" android:title="@string/settings_polling_interval_title" android:key="polling_interval" android:dependency="sync_data" android:defaultValue="60" android:entryValues="@array/refresh_interval_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_other" android:key="settings_other">
        <CheckBoxPreference android:title="@string/settings_display_possibly_sensitive_media_title" android:key="display_sensitive_media" android:summary="@string/settings_display_possibly_sensitive_media_summary" />
        <Preference android:title="@string/settings_app_graph_title" android:key="app_graph" android:summary="" />
        <Preference android:title="@string/commerce_profile_summary_title" android:key="commerce_settings_payment_shipping" />
        <Preference android:title="@string/commerce_menu_order_history" android:key="commerce_settings_order_history" />
        <Preference android:title="@string/phone_association_settings_title" android:key="phone_association" />
        <Preference android:title="@string/settings_security_title" android:key="security" />
        <Preference android:title="@string/settings_privacy_title" android:key="privacy" />
        <Preference android:title="@string/change_screen_name" android:key="change_screen_name" />
        <Preference android:title="@string/change_password" android:key="change_password" />
        <Preference android:title="@string/log_out" android:key="remove_account" />
    </PreferenceCategory>
</PreferenceScreen>