<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_general_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/settings_sound_effects" android:key="sound_effects" android:defaultValue="true" />
    <ListPreference android:entries="@array/font_sizes" android:title="@string/settings_font_size" android:key="font_size" android:defaultValue="@string/default_font_size" android:entryValues="@array/font_sizes_values" />
    <CheckBoxPreference android:title="@string/settings_media_forward" android:key="media_forward" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/settings_in_app_browser" android:key="in_app_browser" android:summary="@string/settings_in_app_browser_summary" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/settings_location_title" android:key="location" android:summary="@string/settings_location_summary" android:defaultValue="false" />
    <PreferenceScreen android:title="@string/settings_proxy_settings" android:key="advanced_proxy" android:summary="@string/settings_enable_http_proxy_summary" />
</PreferenceScreen>