<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:twitter="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_share" android:title="@string/button_action_share" twitter:order="1" twitter:showAsAction="never" />
    <item android:id="@id/menu_compose_dm" android:title="@string/users_direct_message" twitter:order="2" twitter:showAsAction="never" />
    <item android:id="@id/menu_turn_off_retweets" android:title="@string/users_turn_off_retweets" twitter:order="3" twitter:showAsAction="never" />
    <item android:id="@id/menu_turn_on_retweets" android:title="@string/users_turn_on_retweets" twitter:order="4" twitter:showAsAction="never" />
    <item android:id="@id/menu_drafts" android:title="@string/drafts" twitter:order="5" twitter:showAsAction="never" />
    <item android:id="@id/menu_add_to_list" android:title="@string/users_add_list_member" twitter:order="6" twitter:showAsAction="never" />
    <item android:id="@id/menu_show_lists" android:title="@string/profile_tab_title_lists_owned_by" twitter:order="7" twitter:showAsAction="never" />
    <item android:id="@id/menu_mute" android:title="@string/mute" twitter:order="8" twitter:showAsAction="never" />
    <item android:id="@id/menu_unmute" android:title="@string/unmute" twitter:order="9" twitter:showAsAction="never" />
    <item android:id="@id/menu_unblock" android:title="@string/users_unblock" twitter:order="10" twitter:showAsAction="never" />
    <item android:id="@id/menu_block" android:title="@string/block" twitter:order="11" twitter:showAsAction="never" />
    <item android:id="@id/menu_report" android:title="@string/report" twitter:order="12" twitter:showAsAction="never" />
    <item android:id="@id/menu_ads_companion" android:title="@string/ads_companion" twitter:order="13" twitter:showAsAction="never" />
</menu>