<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:twitter="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_title_highlights" android:id="@id/highlights_menu_item" android:visible="false" android:title="@string/highlights_title" twitter:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_title_find_people" android:id="@id/find_people" android:title="@string/users_pick_friend_title" twitter:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_title_messages" android:id="@id/toolbar_dms" android:title="@string/home_direct_messages" twitter:priority="1" twitter:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_title_notifications" android:id="@id/toolbar_notif" android:title="@string/notif_center_title" twitter:priority="2" twitter:showAsAction="ifRoom" />
    <item android:id="@id/my_profile" android:title="@string/profile_item" twitter:order="1" twitter:overflowIcon="@drawable/bg_no_profile_photo_sm" twitter:showAsAction="never" />
    <item android:id="@id/news" android:visible="false" android:title="@string/news_title" twitter:showAsAction="never" />
    <item android:id="@id/lists" android:title="@string/profile_tab_title_lists_owned_by" twitter:showAsAction="never" />
    <item android:id="@id/timelines" android:visible="false" android:title="@string/profile_tab_title_collections_owned_by" twitter:showAsAction="never" />
    <item android:id="@id/drafts" android:title="@string/drafts" twitter:showAsAction="never" />
    <item android:id="@id/find_people_overflow" android:visible="false" android:title="@string/users_pick_friend_title" twitter:showAsAction="never" />
    <item android:id="@id/accounts" android:title="@string/accounts_title" twitter:showAsAction="never" />
    <item android:id="@id/ads_companion" android:visible="false" android:title="@string/ads_companion" twitter:showAsAction="never" />
</menu>