<?xml version="1.0" encoding="utf-8"?>
<com.twitter.android.widget.EngagementActionBar android:gravity="center" android:layout_gravity="center_vertical" android:background="@color/pressed" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:twitter="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/reply" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_action_reply" android:layout_weight="0.2" android:contentDescription="@string/button_action_reply" style="@style/Button.Action" />
    <com.twitter.android.widget.ToggleImageButton android:id="@id/retweet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_action_rt" android:layout_weight="0.2" twitter:contentDescriptionOn="@string/button_status_retweeted" twitter:contentDescriptionOff="@string/button_action_retweet" twitter:toggleOnClick="false" style="@style/Button.Action" />
    <com.twitter.android.widget.ToggleImageButton android:id="@id/favorite" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_action_fave" android:layout_weight="0.2" twitter:contentDescriptionOn="@string/button_status_favorited" twitter:contentDescriptionOff="@string/button_action_fave" style="@style/Button.Action" />
    <ImageButton android:id="@id/share" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_action_share" android:layout_weight="0.2" android:contentDescription="@string/button_action_share" style="@style/Button.Action" />
    <ImageButton android:id="@id/delete" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_action_delete" android:layout_weight="0.2" android:contentDescription="@string/button_action_delete" style="@style/Button.Action" />
    <ImageButton android:id="@id/dismiss" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_action_dismiss" android:layout_weight="0.2" android:contentDescription="@string/button_action_dismiss" style="@style/Button.Action" />
</com.twitter.android.widget.EngagementActionBar>