<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:twitter="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/top_toolbar" />
    <ScrollView android:id="@id/scroll_view" android:background="@color/list_margin_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/signup_form" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/SignupForm">
                <com.twitter.ui.widget.TwitterEditText android:id="@id/name" android:nextFocusDown="@id/identifier" android:hint="@string/signup_name_hint" android:maxLength="@integer/profile_full_name_max_length" android:drawableRight="@drawable/ic_sign_up_field_state_list" android:inputType="textPersonName" twitter:labelText="@string/signup_name_label" style="@style/TwitterSignupEdit" />
                <com.twitter.internal.android.widget.PopupEditText android:id="@id/identifier" android:nextFocusDown="@id/username" android:layout_marginTop="@dimen/standard_spacing" android:drawableRight="@drawable/ic_sign_up_field_state_list" android:inputType="textEmailAddress" android:imeOptions="actionNext" twitter:labelText="@string/signup_email_label" style="@style/TwitterSignupEdit" />
                <com.twitter.internal.android.widget.PopupEditText android:id="@id/username" android:nextFocusDown="@id/password" android:layout_marginTop="@dimen/standard_spacing" android:hint="@string/signup_username_hint" android:maxLength="@integer/username_max_length" android:drawableLeft="@drawable/ic_form_at" android:drawableRight="@drawable/ic_sign_up_field_state_list" android:inputType="textNoSuggestions" twitter:labelText="@string/signup_username_label" style="@style/TwitterSignupEdit" />
                <com.twitter.ui.widget.TwitterEditText android:id="@id/password" android:layout_marginTop="@dimen/standard_spacing" android:hint="@string/signup_password_hint" android:drawableRight="@drawable/ic_sign_up_password_field_state_list" android:inputType="textPassword" android:imeOptions="actionGo" twitter:labelText="@string/signup_password_label" style="@style/TwitterSignupEdit" />
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/phone_row" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <com.twitter.internal.android.widget.PopupEditText android:id="@id/phone" android:layout_marginTop="@dimen/standard_spacing" android:hint="@string/signup_phone_hint" android:drawableRight="@drawable/ic_sign_up_field_state_list" android:inputType="phone" android:imeOptions="actionGo" twitter:labelText="@string/signup_phone_label" style="@style/TwitterSignupEdit" />
                </LinearLayout>
            </LinearLayout>
            <View android:id="@id/horizontal_rule" android:layout_marginBottom="5.0dip" android:layout_below="@id/signup_form" style="@style/HorizontalRule" />
            <CheckBox android:layout_gravity="center_vertical" android:id="@id/phone_number_addr_book_checkbox" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/card_inset" android:layout_marginRight="@dimen/card_inset" android:layout_marginBottom="@dimen/signup_checkbox_margin_bottom" android:checked="true" android:text="@string/signup_addr_book_no_phone_text" android:layout_below="@id/horizontal_rule" />
            <com.twitter.ui.widget.TwitterButton android:enabled="false" android:id="@id/signup_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_row_padding_horizontal" android:layout_marginRight="@dimen/list_row_padding_horizontal" android:text="@string/signup_sign_up" android:layout_below="@id/phone_number_addr_book_checkbox" style="@style/TwitterButtonMediumHeavy" />
            <com.twitter.internal.android.widget.TypefacesTextView android:textColorLink="@color/link" android:id="@id/tos" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/card_inset" android:layout_marginTop="@dimen/signup_tos_margin" android:layout_marginRight="@dimen/card_inset" android:layout_marginBottom="@dimen/signup_tos_margin" android:text="@string/signup_tos_privacy" android:layout_below="@id/signup_button" android:layout_alignParentLeft="true" android:lineSpacingMultiplier="1.2" style="@style/LogInText" />
            <View android:id="@id/horizontal_rule_tos" android:layout_marginBottom="5.0dip" android:layout_below="@id/tos" style="@style/HorizontalRule" />
            <com.twitter.internal.android.widget.TypefacesTextView android:textColor="@color/link" android:id="@id/advanced_options" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/card_inset" android:layout_marginRight="@dimen/card_inset" android:layout_marginBottom="@dimen/signup_advanced_options_margin_bottom" android:text="@string/settings_advanced_options" android:layout_below="@id/horizontal_rule_tos" android:lineSpacingMultiplier="1.2" style="@style/LogInText" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>